fix: css on request not centered

--- a/poemfrontend/src/css/FriendsMenu.css
+++ b/poemfrontend/src/css/FriendsMenu.css
@@ -16,8 +16,14 @@
     border-radius: 20px;
 }
 
-.items{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+.accrej{
+    border: 5px dashed white;
+    padding: 5px;
+    align-items: center;
 }
+.username{
+    text-align: center;
+}
+
+
+
